packages/cli/tests/fixtures/errors/reserved/spinner/types.ts
import type { VariantProps } from "jade-garden";
import type { spinnerStyles } from ".";

export type Variants = VariantProps<typeof spinnerStyles>;
